--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.2",
     "framer-motion": "^11.3.0",
     "json-server": "^1.0.0-beta.1",
+    "jwt-decode": "^4.0.0",
     "maplibre-gl": "^4.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
